Removing some gaps, fixing menubar css a bit

--- a/catalog/ui/search-ui/standard/src/main/webapp/less/components/menu-bar.less
+++ b/catalog/ui/search-ui/standard/src/main/webapp/less/components/menu-bar.less
@@ -15,9 +15,14 @@
     text-align: right;
     white-space: nowrap;
 
+    .normalNav {
+      font-size: 0px;
+    }
+
     .nav {
       display: inline-block;
       text-align: center;
+      font-size: 14px;
 
       &:last-of-type {
         width: auto;
